Fix card height in dark mode

--- a/src/stylesheets/layout/_queenListD.scss
+++ b/src/stylesheets/layout/_queenListD.scss
@@ -45,7 +45,7 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      height: 300px;
+      height: 320px;
 
       &-img {
         height: 80%;
